plugins {
    id "idea"
    id "com.android.library" apply false
    id "org.jetbrains.kotlin.android" apply false
}

idea.module {
    excludeDirs += file("out")
}

subprojects { subproject ->
    plugins.withId("com.android.base") {
        android {
            compileSdk = 37
            buildToolsVersion = "37.0.0"
            ndkVersion = "30.0.16248370"
            defaultConfig {
                minSdk = 24
                targetSdk = 37
            }
            compileOptions {
                sourceCompatibility = JavaVersion.VERSION_21
                targetCompatibility = JavaVersion.VERSION_21
            }
        }
    }
}

def gitCommitCount = Integer.parseInt("git rev-list --count HEAD".execute([], project.rootDir).text.trim())
def baseVersionName = "13.7.0"
def isBeta = project.hasProperty("beta")
ext {
    versionCode = gitCommitCount
    versionName = "${baseVersionName}${if (isBeta) "-beta" else ""}-thedjchi"
}
